--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+
+	<title>INICIAR SESION</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+</head>
+
+<body style="background-color: floralwhite;">
+	<section class="h-100">
+		<div class="container h-100">
+			<div class="row justify-content-sm-center h-100">
+				<div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
+					<div class="text-center my-5">
+						<img src="/static/images/UIFE_Negro.png" alt="logo" width="250">
+					</div>
+					<div class="card shadow-lg">
+						<div class="card-body p-5">
+							<h1 class="fs-4 card-title fw-bold mb-4 text-center" style="color: #ab2034;">BIENVENIDO</h1>
+							<form method="POST" class="needs-validation" novalidate="" autocomplete="off" id="formLogin">
+								<div class="mb-3">
+									<label class="mb-2 text-muted" for="usuarioLogin">Usuario</label>
+									<input id="usuarioLogin" type="text" class="form-control" name="usuarioLogin" value="" required autofocus>
+									<div class="invalid-feedback">
+										Usuario incorrecto
+									</div>
+								</div>
+
+								<div class="mb-3">
+									<div class="mb-2 w-100">
+										<label class="text-muted" for="passwordLogin">Contraseña</label>
+									</div>
+									<input id="passwordLogin" type="password" class="form-control" name="passwordLogin" required>
+								    <div class="invalid-feedback">
+								    	Contraseña incorrecta
+							    	</div>
+								</div>
+
+								<div class="d-flex align-items-center">
+									<button type="button" class="btn btn-primary ms-auto" style="background-color: #aa2133; border-color: #aa2133;" onclick="loguear();" id="btnIniciarSesion">
+										Iniciar sesión
+									</button>
+								</div>
+							</form>
+						</div>
+						<div class="card-footer py-3 border-0">
+						</div>
+					</div>
+					<div class="text-center mt-5 text-muted">
+						Copyright &copy; 2022-2028 - UIFE Tamaulipas
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+<!--	<script type="text/javascript" src="{{ url_for('static', filename='js/1219/plugins/jquery-3.4.1.min.js') }}?{{version}}"></script>-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" ></script>
+	<script type="text/javascript">
+		$( document ).ready(function() {
+
+			if (sessionStorage.usuario){
+		      window.location="/bienvenidaTest.html"
+		    }
+
+			$(document).on("keydown",function(e){
+			   var keyCode = e.which || e.keyCode;
+			   if(keyCode == 13) {
+				  loguear();
+			   }
+			});
+		});
+
+		function loguear(){
+			let usuario = $("#usuarioLogin").val();
+			let pass = $("#passwordLogin").val();
+			let formLogin = $("#formLogin");
+
+			if (usuario == "administrador" && pass == "administrador123"){
+				sessionStorage.setItem('usuario', usuario)
+				window.location="/bienvenidaTest.html"
+			}else{
+				formLogin.trigger("reset");
+				formLogin.addClass('was-validated');
+<!--				document.getElementById("usuarioLogin").value = usuario;-->
+<!--				document.getElementById("passwordLogin").value = pass;-->
+			}
+		}
+
+    </script>
+</body>
+</html>
