--- a/bienvenida.html
+++ b/bienvenida.html
@@ -10,7 +10,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="/static/images/UIFE_Negro.png" width="120" height="60" class="d-inline-block align-top" alt="">
+      <img src="/pruebaLogin/static/images/UIFE_Negro.png" width="120" height="60" class="d-inline-block align-top" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -58,31 +58,31 @@
         <th scope="row">1</th>
         <td>ANUAL 2015</td>
         <td>08/08/2022</td>
-        <td><a href="/static/ANUAL 2018.pdf" download="ANUAL 2015.pdf">Descargar</a></td>
+        <td><a href="/pruebaLogin/static/ANUAL 2018.pdf" download="ANUAL 2015.pdf">Descargar</a></td>
       </tr>
       <tr>
         <th scope="row">2</th>
         <td>ANUAL 2016</td>
         <td>05/10/2022</td>
-        <td><a href="/static/ANUAL 2019.pdf" download="ANUAL 2016.pdf">Descargar</a></td>
+        <td><a href="/pruebaLogin/static/ANUAL 2019.pdf" download="ANUAL 2016.pdf">Descargar</a></td>
       </tr>
       <tr>
         <th scope="row">3</th>
         <td>ANUAL 2017</td>
         <td>05/10/2022</td>
-        <td><a href="/static/ANUAL 2019.pdf" download="ANUAL 2017.pdf">Descargar</a></td>
+        <td><a href="/pruebaLogin/static/ANUAL 2019.pdf" download="ANUAL 2017.pdf">Descargar</a></td>
       </tr>
       <tr>
         <th scope="row">4</th>
         <td>ANUAL 2018</td>
         <td>05/10/2022</td>
-        <td><a href="/static/ANUAL 2019.pdf" download="ANUAL 2018.pdf">Descargar</a></td>
+        <td><a href="/pruebaLogin/static/ANUAL 2019.pdf" download="ANUAL 2018.pdf">Descargar</a></td>
       </tr>
       <tr>
         <th scope="row">5</th>
         <td>ANUAL 2019</td>
         <td>05/10/2022</td>
-        <td><a href="/static/ANUAL 2019.pdf" download="ANUAL 2019.pdf">Descargar</a></td>
+        <td><a href="/pruebaLogin/static/ANUAL 2019.pdf" download="ANUAL 2019.pdf">Descargar</a></td>
       </tr>
 
     </tbody>
@@ -94,7 +94,7 @@
 </body>
 
 
-<!--  <script type="text/javascript" src="{{ url_for('static', filename='js/1219/plugins/jquery-3.4.1.min.js') }}?{{version}}"></script>-->
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
